# axturion

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  ENGINEERING_GUIDELINES.md  ENTERPRICE.md  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  TECNICAL_ROADMAP.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1f3a0a2b9c10_add_transition_requires_approval_and_pending.py  4d6b1a8c2f41_audit_hash_chaining.py  85467185cf20_baseline.py  9b6e6e1d7f2a_add_application_result.py  f9f0e849e8c8_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  activity.py  applications.py  reporting.py  workflow_editor.py  workflow_queries.py  workflows.py
backend/app/api/schemas/: activity.py  audit.py  reporting.py  workflow_editor.py
backend/app/automation/: service.py
backend/app/core/: db.py  logging_config.py  seed.py
backend/app/domain/application/: models.py
backend/app/domain/audit/: models.py
backend/app/domain/automation/: models.py
backend/app/domain/candidate/: models.py
backend/app/domain/identity/: models.py
backend/app/domain/job/: models.py
backend/app/domain/organization/: models.py
backend/app/domain/workflow/: models.py
backend/app/services/: activity_service.py  application_service.py  audit_service.py  compliance_service.py  health_service.py  reporting_service.py  workflow_editor_service.py  workflow_query_service.py
backend/app/workflow/: service.py
(+197 files in other folders)
