[project]
name = "ats-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "sqlalchemy==2.0.32",
  "alembic==1.13.2",
  "psycopg[binary]==3.2.1",
  "pydantic==2.8.2",
  "pydantic-settings==2.4.0",
]

[tool.uvicorn]
factory = false